tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_array_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let bar =
    | [] => true
    | [true ..._] => false
    | [false ..._] => false
    | _ => false
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_array_2.kk:6:7
  │
6 │     | _ => false
  │       ^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
